@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/characteristic
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/characteristic/ChangeLog,v 1.11 2015/06/07 10:59:44 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/characteristic/ChangeLog,v 1.12 2015/08/07 15:54:59 klausman Exp $
+
+  07 Aug 2015; Tobias Klausmann <klausman@gentoo.org>
+  characteristic-14.1.0.ebuild, characteristic-14.3.0.ebuild:
+  Keyworded on alpha, bug 528896
 
   07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Add github to remote-id in metadata.xml
